; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_config.c_duplicate_level.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_config.c_duplicate_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@GIT_ERROR_CONFIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [62 x i8] c"there already exists a configuration for the given level (%i)\00", align 1
@GIT_EEXISTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8*)* @duplicate_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @duplicate_level(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__**, align 8
  store i8** %0, i8*** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = bitcast i8** %6 to %struct.TYPE_2__**
  store %struct.TYPE_2__** %7, %struct.TYPE_2__*** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @GIT_UNUSED(i8* %8)
  %10 = load i32, i32* @GIT_ERROR_CONFIG, align 4
  %11 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %5, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i32 @git_error_set(i32 %10, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @GIT_EEXISTS, align 4
  ret i32 %17
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @git_error_set(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
